force-app/main/default/objects/SBQQ__ConfigurationAttribute__c/fields/SBQQ__TargetField__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TargetField__c</fullName>
    <description>Field on the Product Option that sources remaining metadata and holds the value.</description>
    <inlineHelpText>Specify field on Product Option that will hold this attribute&apos;s value.</inlineHelpText>
    <label>Target Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency__c</fullName>
                <label>Agenzia</label>
            </value>
            <value>
                <fullName>CampaignName__c</fullName>
                <label>Campagna</label>
            </value>
            <value>
                <fullName>Channel__c</fullName>
                <label>Canale</label>
            </value>
            <value>
                <fullName>UseCategory__c</fullName>
                <label>Categoria Uso</label>
            </value>
            <value>
                <fullName>CompanyOwner__c</fullName>
                <label>Company Owner</label>
            </value>
            <value>
                <fullName>SupplyCity__c</fullName>
                <label>Comune fornitura</label>
            </value>
            <value>
                <fullName>ConsumptionAnnual__c</fullName>
                <label>Consumo Annuo VAS</label>
            </value>
            <value>
                <fullName>DelayEffectiveDate__c</fullName>
                <label>Dalay data decorrenza</label>
            </value>
            <value>
                <fullName>ClientAge__c</fullName>
                <label>Età Cliente</label>
            </value>
            <value>
                <fullName>ConsumptionRangeEE__c</fullName>
                <label>Fascia consumo EE</label>
            </value>
            <value>
                <fullName>ConsumptionRangeGAS__c</fullName>
                <label>Fascia consumo GAS</label>
            </value>
            <value>
                <fullName>GreenGasOption__c</fullName>
                <label>Opzione Gas Verde</label>
            </value>
            <value>
                <fullName>Login__c</fullName>
                <label>Login</label>
            </value>
            <value>
                <fullName>LoginGroup__c</fullName>
                <label>Gruppo Login</label>
            </value>
            <value>
                <fullName>KeepConsumptionsAnalysis__c</fullName>
                <label>Mantieni Analisi Consumi</label>
            </value>
            <value>
                <fullName>PaymentMode__c</fullName>
                <label>Metodo di Pagamento</label>
            </value>
            <value>
                <fullName>SendingBillMode__c</fullName>
                <label>Modalità Invio Bolletta</label>
            </value>
            <value>
                <fullName>VASBillingMode__c</fullName>
                <label>Modalità Fatturazione VAS</label>
            </value>
            <value>
                <fullName>OccupantsNumber__c</fullName>
                <label>Numero Occupanti</label>
            </value>
            <value>
                <fullName>NewClient__c</fullName>
                <label>Nuovo Cliente</label>
            </value>
            <value>
                <fullName>GreenEnergyOption__c</fullName>
                <label>Opzione Energia Verde</label>
            </value>
            <value>
                <fullName>PowerFlow__c</fullName>
                <label>Potenza/Portata</label>
            </value>
            <value>
                <fullName>PriceFromThirds__c</fullName>
                <label>Prezzo da Terzi</label>
            </value>
            <value>
                <fullName>OwnerAC__c</fullName>
                <label>Proprietario</label>
            </value>
            <value>
                <fullName>Origin__c</fullName>
                <label>Mercato Provenienza</label>
            </value>
            <value>
                <fullName>SupplyProvince__c</fullName>
                <label>Provincia Fornitura</label>
            </value>
            <value>
                <fullName>ResidentDeliveryAddress__c</fullName>
                <label>Residente Indirizzo Fornitura</label>
            </value>
            <value>
                <fullName>Role__c</fullName>
                <label>Ruolo</label>
            </value>
            <value>
                <fullName>Service__c</fullName>
                <label>Servizio</label>
            </value>
            <value>
                <fullName>Surface__c</fullName>
                <label>Superficie</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>